# review-recommender-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
ansible/: README.md  deploy.sh
ansible/playbooks/: deploy.yml
ansible/templates/: bct-agent.service.j2  nginx.conf.j2
ansible/vars/: bct-agent.yml
data/: product_catalogue.jsonl  review_exemplars.jsonl
data/curation/: recommendation_coverage_slices.jsonl
data/eval/: recommendation_eval_cases.jsonl  review_simulation_eval.jsonl  (+2 more)
data/index/: rating_calibrator.joblib
docs/: evaluation-and-gepa.md  solution-paper-task-a.md  solution-paper-task-b.md
scripts/: append_manual_persona_training_case.py  append_sanitized_persona_training_case.py  audit_recommendation_persona_leakage.py  build_konga_persona_review_cases.py  build_recommendation_artifacts.py  build_review_artifacts.py  convert_google_play_reviews_to_training_cases.py  drop_required_friction_points.py  evaluate_recommendations.py  evaluate_review_simulation.py  extract_google_play_reviews_from_snapshot.py  sample_yelp_recommendation_cases.py  set_recommendation_case_persona.py  set_recommendation_persona.py  set_review_eval_gold.py  show_recommendation_case.py  show_review_eval_case.py  validate_recommendation_cases.py
tests/: conftest.py  fakes.py  test_api.py  test_eval_cases.py  test_recommendation_coverage.py  test_recommendation_data_pipeline.py  test_recommendation_evaluation.py  test_recommendation_ranker.py  test_review_manual_gold.py  test_review_simulation.py  test_sanitized_persona_append.py
(+97 files in other folders)
